add migrate in to command for docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ db:
     POSTGRES_PASSWORD: postgres
 django:
   build: .
-  command: venv/bin/python manage.py runserver 0.0.0.0:8000
+  command: bash -c "venv/bin/python manage.py migrate && venv/bin/python manage.py runserver 0.0.0.0:8000"
   ports:
     - "8000:8000"
   links:
