update uwsgi file and use virtualenv

--- a/conf/uwsgi.ini
+++ b/conf/uwsgi.ini
@@ -1,11 +1,12 @@
 [uwsgi]
+pythonpath=/app
 http=0.0.0.0:8000
 module=dashboard.wsgi:application
 master=True
 pidfile=/tmp/master.pid
 vacuum=True
 max-requests=5000
-env=DJANGO_SETTINGS_MODULE=dashboard.settings
+env=DJANGO_SETTINGS_MODULE=dashboard.settings.base
 processes=2
 harakiri=30
 post-buffering=1
