--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
-    "core-js": "^2.4.0"
+    "core-js": "^2.4.0",
+    "webpack": "^1.13.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
