--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -p --progress --colors"
+    "build": "webpack -p --progress --colors",
+    "watch": "webpack --progress --colors --watch"
   },
   "repository": {
     "type": "git",
