--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -p --progress --colors",
+    "build": "webpack -p  --define process.env.NODE_ENV='\"production\"' --progress --colors",
     "watch": "webpack --progress --colors --watch"
   },
   "repository": {
