--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "===================== MOJ Product Dashboard =====================",
   "main": "index.js",
   "dependencies": {
+    "jquery": "^2.2.4",
     "js-cookie": "^2.1.1",
     "plotly.js": "^1.11.0",
+    "select2": "^4.0.3",
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
@@ -13,6 +15,9 @@
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.0"
   },
   "scripts": {
