exclude settings from flake8

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [flake8]
-exclude = .git/,env/,venv/,node_modules/
+exclude = .git/,env/,venv/,node_modules/,dashboard/settings/
 max-complexity = 10
 max-line-length = 120
