--- a/setup.cfg
+++ b/setup.cfg
@@ -2,3 +2,7 @@
 exclude = .git/,env/,venv/,node_modules/,dashboard/settings/
 max-complexity = 10
 max-line-length = 120
+
+[pytest]
+DJANGO_SETTINGS_MODULE=dashboard.settings
+addopts = --ignore=venv --ignore=.txt
