--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "style-loader": "^0.13.1",
+    "urijs": "^1.18.1",
     "webpack": "^1.13.0"
   },
   "scripts": {
