--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "babel-preset-es2015": "^6.9.0",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "lodash": "^4.13.1",
+    "moment": "^2.13.0",
     "style-loader": "^0.13.1",
     "urijs": "^1.18.1",
     "webpack": "^1.13.0"
