add config for coverage

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,3 +6,12 @@ max-line-length = 120
 [pytest]
 DJANGO_SETTINGS_MODULE=dashboard.settings
 addopts = --ignore=venv --ignore=.txt
+
+[coverage:run]
+omit =
+    */tests/*
+    */__init__.py
+    */urls.py
+    */wsgi.py
+    */settings/*
+
