--- a/dashboard/apps/prototype/fixtures/auth_group_permissions.yaml
+++ b/dashboard/apps/prototype/fixtures/auth_group_permissions.yaml
@@ -17,6 +17,18 @@
       - ['change_person', 'prototype', 'person']
       - ['change_project', 'prototype', 'project']
       - ['change_task', 'prototype', 'task']
+      - ['change_cost', 'prototype', 'cost']
+      - ['add_cost', 'prototype', 'cost']
+      - ['delete_cost', 'prototype', 'cost']
+      - ['change_budget', 'prototype', 'budget']
+      - ['add_budget', 'prototype', 'budget']
+      - ['delete_budget', 'prototype', 'budget']
+      - ['change_rag', 'prototype', 'rag']
+      - ['add_rag', 'prototype', 'rag']
+      - ['delete_rag', 'prototype', 'rag']
+      - ['change_note', 'prototype', 'note']
+      - ['add_note', 'prototype', 'note']
+      - ['delete_note', 'prototype', 'note']
 - model: auth.group
   pk: 3
   fields:
@@ -26,3 +38,15 @@
       - ['change_person', 'prototype', 'person']
       - ['change_project', 'prototype', 'project']
       - ['change_task', 'prototype', 'task']
+      - ['change_cost', 'prototype', 'cost']
+      - ['add_cost', 'prototype', 'cost']
+      - ['delete_cost', 'prototype', 'cost']
+      - ['change_budget', 'prototype', 'budget']
+      - ['add_budget', 'prototype', 'budget']
+      - ['delete_budget', 'prototype', 'budget']
+      - ['change_rag', 'prototype', 'rag']
+      - ['add_rag', 'prototype', 'rag']
+      - ['delete_rag', 'prototype', 'rag']
+      - ['change_note', 'prototype', 'note']
+      - ['add_note', 'prototype', 'note']
+      - ['delete_note', 'prototype', 'note']
