--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ max-line-length = 120
 
 [pytest]
 DJANGO_SETTINGS_MODULE=dashboard.settings
-addopts = --ignore=venv --ignore=.txt
+addopts = --ignore=venv --ignore=requirements
 
 [coverage:run]
 omit =
