add upload payroll to finance permissions

--- a/dashboard/apps/prototype/fixtures/auth_group_permissions.yaml
+++ b/dashboard/apps/prototype/fixtures/auth_group_permissions.yaml
@@ -16,6 +16,7 @@
       - ['change_client', 'prototype', 'client']
       - ['change_person', 'prototype', 'person']
       - ['change_project', 'prototype', 'project']
+      - ['upload_project', 'prototype', 'project']
       - ['change_task', 'prototype', 'task']
       - ['change_cost', 'prototype', 'cost']
       - ['add_cost', 'prototype', 'cost']
