re-roganised url routing

--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,8 @@
             "var": 2,
             "let": 2,
             "const": 3
-          }
+          },
+          "SwitchCase": 1
         }],
     }
 }
