--- a/dashboard/apps/prototype/fixtures/auth_group_permissions.yaml
+++ b/dashboard/apps/prototype/fixtures/auth_group_permissions.yaml
@@ -15,8 +15,8 @@
       - ['add_rate', 'prototype', 'rate']
       - ['change_client', 'prototype', 'client']
       - ['change_person', 'prototype', 'person']
+      - ['upload_person', 'prototype', 'person']
       - ['change_project', 'prototype', 'project']
-      - ['upload_project', 'prototype', 'project']
       - ['change_task', 'prototype', 'task']
       - ['change_cost', 'prototype', 'cost']
       - ['add_cost', 'prototype', 'cost']
