refactor and test for method_cache

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ max-complexity = 10
 max-line-length = 120
 
 [pytest]
-DJANGO_SETTINGS_MODULE=dashboard.settings
+DJANGO_SETTINGS_MODULE=dashboard.settings.testing
 addopts = --ignore=venv --ignore=requirements
 
 [coverage:run]
