--- a/package.json
+++ b/package.json
@@ -16,17 +16,22 @@
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.0",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "griddle-react": "^0.6.0",
     "history": "^3.0.0",
     "jest-cli": "^12.1.1",
     "moment": "^2.13.0",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.0"
   },
   "babel": {
     "presets": [
-      "es2015"
+      "es2015",
+      "react"
     ]
   },
   "jest": {
