run celery and celery beat as a daemon with uwsgi

--- a/conf/uwsgi.ini
+++ b/conf/uwsgi.ini
@@ -10,3 +10,4 @@ env=DJANGO_SETTINGS_MODULE=dashboard.settings.base
 processes=2
 harakiri=30
 post-buffering=1
+smart-attach-daemon=/tmp/celery.pid /app/venv/bin/python /app/manage.py celery worker -A dashboard -B --concurrency=10 --loglevel=INFO --pidfile=/tmp/celery.pid
