enable threading on uwsgi

--- a/conf/uwsgi.ini
+++ b/conf/uwsgi.ini
@@ -7,6 +7,7 @@ pidfile=/tmp/master.pid
 vacuum=True
 max-requests=5000
 env=DJANGO_SETTINGS_MODULE=dashboard.settings.base
+enable-threads=True
 processes=2
 harakiri=30
 post-buffering=1
