--- a/setup.cfg
+++ b/setup.cfg
@@ -15,3 +15,5 @@ omit =
     */wsgi.py
     */settings/*
     dashboard/apps/prototype/management/commands/*
+    dashboard/apps/prototype/tasks.py
+    dashboard/celery.py
