--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
-exclude = .git/,env/,venv/,node_modules/,dashboard/settings/
+exclude = .git/,env/,venv/,node_modules/,dashboard/settings/,dashboard/__init__.py
 max-complexity = 10
 max-line-length = 120
 
