use django-redis for cache in base settings and add file based cache to local example file

--- a/dashboard/settings/local.py.example
+++ b/dashboard/settings/local.py.example
@@ -4,6 +4,16 @@
 BROKER_URL = "amqp://"
 BROKER_TRANSPORT_OPTIONS = {}
 
+CACHES = {
+    'default': {
+        'BACKEND': 'django.core.cache.backends.filebased.FileBasedCache',
+        'LOCATION': '/tmp/django_cache',
+        'OPTIONS': {
+            'MAX_ENTRIES': 10000
+        }
+    }
+}
+
 
 """
 ./manage.py reset_db
