exclude migrations from test and flake8

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
-exclude = .git/,env/,venv/,node_modules/,dashboard/settings/,dashboard/__init__.py
+exclude = .git/,env/,venv/,node_modules/, dashboard/apps/prototype/migrations/,dashboard/settings/,dashboard/__init__.py
 max-complexity = 10
 max-line-length = 120
 
@@ -14,6 +14,7 @@ omit =
     */urls.py
     */wsgi.py
     */settings/*
+    */migrations/*
     dashboard/apps/prototype/management/commands/*
     dashboard/apps/prototype/tasks.py
     dashboard/celery.py
