status for project and project group

--- a/dashboard/apps/prototype/fixtures/auth_group_permissions.yaml
+++ b/dashboard/apps/prototype/fixtures/auth_group_permissions.yaml
@@ -24,9 +24,12 @@
       - ['change_budget', 'prototype', 'budget']
       - ['add_budget', 'prototype', 'budget']
       - ['delete_budget', 'prototype', 'budget']
-      - ['change_rag', 'prototype', 'rag']
-      - ['add_rag', 'prototype', 'rag']
-      - ['delete_rag', 'prototype', 'rag']
+      - ['change_projectstatus', 'prototype', 'projectstatus']
+      - ['add_projectstatus', 'prototype', 'projectstatus']
+      - ['delete_projectstatus', 'prototype', 'projectstatus']
+      - ['change_projectgroupstatus', 'prototype', 'projectgroupstatus']
+      - ['add_projectgroupstatus', 'prototype', 'projectgroupstatus']
+      - ['delete_projectgroupstatus', 'prototype', 'projectgroupstatus']
       - ['change_note', 'prototype', 'note']
       - ['add_note', 'prototype', 'note']
       - ['delete_note', 'prototype', 'note']
@@ -46,9 +49,12 @@
       - ['change_budget', 'prototype', 'budget']
       - ['add_budget', 'prototype', 'budget']
       - ['delete_budget', 'prototype', 'budget']
-      - ['change_rag', 'prototype', 'rag']
-      - ['add_rag', 'prototype', 'rag']
-      - ['delete_rag', 'prototype', 'rag']
+      - ['change_projectstatus', 'prototype', 'projectstatus']
+      - ['add_projectstatus', 'prototype', 'projectstatus']
+      - ['delete_projectstatus', 'prototype', 'projectstatus']
+      - ['change_projectgroupstatus', 'prototype', 'projectgroupstatus']
+      - ['add_projectgroupstatus', 'prototype', 'projectgroupstatus']
+      - ['delete_projectgroupstatus', 'prototype', 'projectgroupstatus']
       - ['change_note', 'prototype', 'note']
       - ['add_note', 'prototype', 'note']
       - ['delete_note', 'prototype', 'note']
