--- a/dashboard/apps/prototype/fixtures/auth_group_permissions.yaml
+++ b/dashboard/apps/prototype/fixtures/auth_group_permissions.yaml
@@ -50,6 +50,8 @@
   fields:
     name: Delivery
     permissions:
+      - ['change_client', 'prototype', 'client']
+      - ['change_person', 'prototype', 'person']
       - ['change_project', 'prototype', 'project']
       - ['change_task', 'prototype', 'task']
       - ['change_cost', 'prototype', 'cost']
