--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-spinkit": "^1.1.7",
     "react-tabs": "^0.7.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.0"
+    "webpack": "^1.13.0",
+    "webpack-bundle-tracker": "0.0.93"
   },
   "babel": {
     "presets": [
