renamed project to product

--- a/dashboard/apps/prototype/fixtures/auth_group_permissions.yaml
+++ b/dashboard/apps/prototype/fixtures/auth_group_permissions.yaml
@@ -23,10 +23,10 @@
       - ['change_client', 'prototype', 'client']
       - ['change_person', 'prototype', 'person']
       - ['upload_person', 'prototype', 'person']
-      - ['change_project', 'prototype', 'project']
-      - ['adjustmentexport_project', 'prototype', 'project']
-      - ['intercompanyexport_project', 'prototype', 'project']
-      - ['projectdetailexport_project', 'prototype', 'project']
+      - ['change_product', 'prototype', 'product']
+      - ['adjustmentexport_product', 'prototype', 'product']
+      - ['intercompanyexport_product', 'prototype', 'product']
+      - ['productdetailexport_product', 'prototype', 'product']
       - ['change_task', 'prototype', 'task']
       - ['change_cost', 'prototype', 'cost']
       - ['add_cost', 'prototype', 'cost']
@@ -34,15 +34,15 @@
       - ['change_budget', 'prototype', 'budget']
       - ['add_budget', 'prototype', 'budget']
       - ['delete_budget', 'prototype', 'budget']
-      - ['change_projectstatus', 'prototype', 'projectstatus']
-      - ['add_projectstatus', 'prototype', 'projectstatus']
-      - ['delete_projectstatus', 'prototype', 'projectstatus']
-      - ['change_projectgroupstatus', 'prototype', 'projectgroupstatus']
-      - ['add_projectgroupstatus', 'prototype', 'projectgroupstatus']
-      - ['delete_projectgroupstatus', 'prototype', 'projectgroupstatus']
-      - ['add_projectgroup', 'prototype', 'projectgroup']
-      - ['change_projectgroup', 'prototype', 'projectgroup']
-      - ['delete_projectgroup', 'prototype', 'projectgroup']
+      - ['change_productstatus', 'prototype', 'productstatus']
+      - ['add_productstatus', 'prototype', 'productstatus']
+      - ['delete_productstatus', 'prototype', 'productstatus']
+      - ['change_productgroupstatus', 'prototype', 'productgroupstatus']
+      - ['add_productgroupstatus', 'prototype', 'productgroupstatus']
+      - ['delete_productgroupstatus', 'prototype', 'productgroupstatus']
+      - ['add_productgroup', 'prototype', 'productgroup']
+      - ['change_productgroup', 'prototype', 'productgroup']
+      - ['delete_productgroup', 'prototype', 'productgroup']
       - ['change_saving', 'prototype', 'saving']
       - ['add_saving', 'prototype', 'saving']
       - ['delete_saving', 'prototype', 'saving']
@@ -56,7 +56,7 @@
     permissions:
       - ['change_client', 'prototype', 'client']
       - ['change_person', 'prototype', 'person']
-      - ['change_project', 'prototype', 'project']
+      - ['change_product', 'prototype', 'product']
       - ['change_task', 'prototype', 'task']
       - ['change_cost', 'prototype', 'cost']
       - ['add_cost', 'prototype', 'cost']
@@ -64,15 +64,15 @@
       - ['change_budget', 'prototype', 'budget']
       - ['add_budget', 'prototype', 'budget']
       - ['delete_budget', 'prototype', 'budget']
-      - ['change_projectstatus', 'prototype', 'projectstatus']
-      - ['add_projectstatus', 'prototype', 'projectstatus']
-      - ['delete_projectstatus', 'prototype', 'projectstatus']
-      - ['change_projectgroupstatus', 'prototype', 'projectgroupstatus']
-      - ['add_projectgroupstatus', 'prototype', 'projectgroupstatus']
-      - ['delete_projectgroupstatus', 'prototype', 'projectgroupstatus']
-      - ['add_projectgroup', 'prototype', 'projectgroup']
-      - ['change_projectgroup', 'prototype', 'projectgroup']
-      - ['delete_projectgroup', 'prototype', 'projectgroup']
+      - ['change_productstatus', 'prototype', 'productstatus']
+      - ['add_productstatus', 'prototype', 'productstatus']
+      - ['delete_productstatus', 'prototype', 'productstatus']
+      - ['change_productgroupstatus', 'prototype', 'productgroupstatus']
+      - ['add_productgroupstatus', 'prototype', 'productgroupstatus']
+      - ['delete_productgroupstatus', 'prototype', 'productgroupstatus']
+      - ['add_productgroup', 'prototype', 'productgroup']
+      - ['change_productgroup', 'prototype', 'productgroup']
+      - ['delete_productgroup', 'prototype', 'productgroup']
       - ['change_saving', 'prototype', 'saving']
       - ['add_saving', 'prototype', 'saving']
       - ['delete_saving', 'prototype', 'saving']
