rename variable prototype to dashboard

--- a/dashboard/apps/dashboard/fixtures/auth_group_permissions.yaml
+++ b/dashboard/apps/dashboard/fixtures/auth_group_permissions.yaml
@@ -18,64 +18,64 @@
   fields:
     name: Finance
     permissions:
-      - ['change_rate', 'prototype', 'rate']
-      - ['add_rate', 'prototype', 'rate']
-      - ['change_area', 'prototype', 'area']
-      - ['change_person', 'prototype', 'person']
-      - ['upload_person', 'prototype', 'person']
-      - ['change_product', 'prototype', 'product']
-      - ['adjustmentexport_product', 'prototype', 'product']
-      - ['intercompanyexport_product', 'prototype', 'product']
-      - ['productdetailexport_product', 'prototype', 'product']
-      - ['change_task', 'prototype', 'task']
-      - ['change_cost', 'prototype', 'cost']
-      - ['add_cost', 'prototype', 'cost']
-      - ['delete_cost', 'prototype', 'cost']
-      - ['change_budget', 'prototype', 'budget']
-      - ['add_budget', 'prototype', 'budget']
-      - ['delete_budget', 'prototype', 'budget']
-      - ['change_productstatus', 'prototype', 'productstatus']
-      - ['add_productstatus', 'prototype', 'productstatus']
-      - ['delete_productstatus', 'prototype', 'productstatus']
-      - ['change_productgroupstatus', 'prototype', 'productgroupstatus']
-      - ['add_productgroupstatus', 'prototype', 'productgroupstatus']
-      - ['delete_productgroupstatus', 'prototype', 'productgroupstatus']
-      - ['add_productgroup', 'prototype', 'productgroup']
-      - ['change_productgroup', 'prototype', 'productgroup']
-      - ['delete_productgroup', 'prototype', 'productgroup']
-      - ['change_saving', 'prototype', 'saving']
-      - ['add_saving', 'prototype', 'saving']
-      - ['delete_saving', 'prototype', 'saving']
-      - ['change_link', 'prototype', 'link']
-      - ['add_link', 'prototype', 'link']
-      - ['delete_link', 'prototype', 'link']
+      - ['change_rate', 'dashboard', 'rate']
+      - ['add_rate', 'dashboard', 'rate']
+      - ['change_area', 'dashboard', 'area']
+      - ['change_person', 'dashboard', 'person']
+      - ['upload_person', 'dashboard', 'person']
+      - ['change_product', 'dashboard', 'product']
+      - ['adjustmentexport_product', 'dashboard', 'product']
+      - ['intercompanyexport_product', 'dashboard', 'product']
+      - ['productdetailexport_product', 'dashboard', 'product']
+      - ['change_task', 'dashboard', 'task']
+      - ['change_cost', 'dashboard', 'cost']
+      - ['add_cost', 'dashboard', 'cost']
+      - ['delete_cost', 'dashboard', 'cost']
+      - ['change_budget', 'dashboard', 'budget']
+      - ['add_budget', 'dashboard', 'budget']
+      - ['delete_budget', 'dashboard', 'budget']
+      - ['change_productstatus', 'dashboard', 'productstatus']
+      - ['add_productstatus', 'dashboard', 'productstatus']
+      - ['delete_productstatus', 'dashboard', 'productstatus']
+      - ['change_productgroupstatus', 'dashboard', 'productgroupstatus']
+      - ['add_productgroupstatus', 'dashboard', 'productgroupstatus']
+      - ['delete_productgroupstatus', 'dashboard', 'productgroupstatus']
+      - ['add_productgroup', 'dashboard', 'productgroup']
+      - ['change_productgroup', 'dashboard', 'productgroup']
+      - ['delete_productgroup', 'dashboard', 'productgroup']
+      - ['change_saving', 'dashboard', 'saving']
+      - ['add_saving', 'dashboard', 'saving']
+      - ['delete_saving', 'dashboard', 'saving']
+      - ['change_link', 'dashboard', 'link']
+      - ['add_link', 'dashboard', 'link']
+      - ['delete_link', 'dashboard', 'link']
 - model: auth.group
   pk: 3
   fields:
     name: Delivery
     permissions:
-      - ['change_area', 'prototype', 'area']
-      - ['change_person', 'prototype', 'person']
-      - ['change_product', 'prototype', 'product']
-      - ['change_task', 'prototype', 'task']
-      - ['change_cost', 'prototype', 'cost']
-      - ['add_cost', 'prototype', 'cost']
-      - ['delete_cost', 'prototype', 'cost']
-      - ['change_budget', 'prototype', 'budget']
-      - ['add_budget', 'prototype', 'budget']
-      - ['delete_budget', 'prototype', 'budget']
-      - ['change_productstatus', 'prototype', 'productstatus']
-      - ['add_productstatus', 'prototype', 'productstatus']
-      - ['delete_productstatus', 'prototype', 'productstatus']
-      - ['change_productgroupstatus', 'prototype', 'productgroupstatus']
-      - ['add_productgroupstatus', 'prototype', 'productgroupstatus']
-      - ['delete_productgroupstatus', 'prototype', 'productgroupstatus']
-      - ['add_productgroup', 'prototype', 'productgroup']
-      - ['change_productgroup', 'prototype', 'productgroup']
-      - ['delete_productgroup', 'prototype', 'productgroup']
-      - ['change_saving', 'prototype', 'saving']
-      - ['add_saving', 'prototype', 'saving']
-      - ['delete_saving', 'prototype', 'saving']
-      - ['change_link', 'prototype', 'link']
-      - ['add_link', 'prototype', 'link']
-      - ['delete_link', 'prototype', 'link']
+      - ['change_area', 'dashboard', 'area']
+      - ['change_person', 'dashboard', 'person']
+      - ['change_product', 'dashboard', 'product']
+      - ['change_task', 'dashboard', 'task']
+      - ['change_cost', 'dashboard', 'cost']
+      - ['add_cost', 'dashboard', 'cost']
+      - ['delete_cost', 'dashboard', 'cost']
+      - ['change_budget', 'dashboard', 'budget']
+      - ['add_budget', 'dashboard', 'budget']
+      - ['delete_budget', 'dashboard', 'budget']
+      - ['change_productstatus', 'dashboard', 'productstatus']
+      - ['add_productstatus', 'dashboard', 'productstatus']
+      - ['delete_productstatus', 'dashboard', 'productstatus']
+      - ['change_productgroupstatus', 'dashboard', 'productgroupstatus']
+      - ['add_productgroupstatus', 'dashboard', 'productgroupstatus']
+      - ['delete_productgroupstatus', 'dashboard', 'productgroupstatus']
+      - ['add_productgroup', 'dashboard', 'productgroup']
+      - ['change_productgroup', 'dashboard', 'productgroup']
+      - ['delete_productgroup', 'dashboard', 'productgroup']
+      - ['change_saving', 'dashboard', 'saving']
+      - ['add_saving', 'dashboard', 'saving']
+      - ['delete_saving', 'dashboard', 'saving']
+      - ['change_link', 'dashboard', 'link']
+      - ['add_link', 'dashboard', 'link']
+      - ['delete_link', 'dashboard', 'link']
