--- a/package.json
+++ b/package.json
@@ -4,31 +4,30 @@
   "description": "===================== MOJ Product Dashboard =====================",
   "main": "index.js",
   "dependencies": {
-    "jquery": "^2.2.4",
-    "js-cookie": "^2.1.1",
-    "plotly.js": "^1.11.0",
-    "whatwg-fetch": "^1.0.0"
+    "js-cookie": "~2.1.1",
+    "plotly.js": "~1.11.0",
+    "whatwg-fetch": "~1.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
-    "babel-jest": "^12.1.0",
-    "babel-loader": "^6.2.4",
-    "babel-polyfill": "^6.9.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.0",
-    "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "griddle-react": "^0.6.0",
-    "history": "^3.0.0",
-    "jest-cli": "^12.1.1",
+    "babel-jest": "~12.1.0",
+    "babel-loader": "^6.2.5",
+    "babel-polyfill": "~6.9.0",
+    "babel-preset-es2015": "~6.9.0",
+    "babel-preset-react": "~6.11.0",
+    "css-loader": "~0.23.1",
+    "extract-text-webpack-plugin": "~1.0.1",
+    "file-loader": "~0.9.0",
+    "griddle-react": "~0.6.0",
+    "history": "~3.0.0",
+    "jest-cli": "~12.1.1",
     "moment": "^2.13.0",
-    "react": "^15.3.0",
+    "react": "^15.3.2",
     "react-dom": "^15.1.0",
-    "react-spinkit": "^1.1.7",
-    "react-tabs": "^0.7.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.0",
+    "react-spinkit": "^1.1.11",
+    "react-tabs": "~0.7.0",
+    "style-loader": "~0.13.1",
+    "webpack": "^1.13.2",
     "webpack-bundle-tracker": "0.0.93"
   },
   "babel": {
