--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "js-cookie": "~2.1.1",
-    "plotly.js": "~1.11.0",
+    "plotly.js": "^1.17.3",
     "whatwg-fetch": "~1.0.0"
   },
   "devDependencies": {
