no ssl redirect for testing

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ max-complexity = 10
 max-line-length = 120
 
 [pytest]
+DEBUG=True
 DJANGO_SETTINGS_MODULE=dashboard.settings.testing
 addopts = --ignore=venv --ignore=requirements
 
