update local.example with webpack config

--- a/dashboard/settings/local.py.example
+++ b/dashboard/settings/local.py.example
@@ -19,7 +19,10 @@ CACHES = {
 
 WEBPACK_LOADER = {
     'DEFAULT': {
-        'CACHE': not DEBUG
+        'CACHE': not DEBUG,
+        'BUNDLE_DIR_NAME': location('assets/dist/'),
+        'STATS_FILE': location('assets/dist/webpack-stats.json'),
+        'IGNORE': ['.+\.hot-update.js', '.+\.map']
     }
 }
 
