add view to export rates for finance users

--- a/dashboard/apps/dashboard/fixtures/auth_group_permissions.yaml
+++ b/dashboard/apps/dashboard/fixtures/auth_group_permissions.yaml
@@ -23,6 +23,7 @@
       - ['change_area', 'dashboard', 'area']
       - ['change_person', 'dashboard', 'person']
       - ['upload_person', 'dashboard', 'person']
+      - ['export_person_rates', 'dashboard', 'person']
       - ['change_product', 'dashboard', 'product']
       - ['adjustmentexport_product', 'dashboard', 'product']
       - ['intercompanyexport_product', 'dashboard', 'product']
