just use python

--- a/conf/uwsgi.ini
+++ b/conf/uwsgi.ini
@@ -9,4 +9,4 @@ enable-threads=True
 processes=10
 harakiri=30
 post-buffering=1
-smart-attach-daemon=/tmp/celery.pid /usr/bin/python3 /app/manage.py celery worker -A dashboard -B --concurrency=10 --loglevel=INFO --pidfile=/tmp/celery.pid
+smart-attach-daemon=/tmp/celery.pid /usr/bin/python /app/manage.py celery worker -A dashboard -B --concurrency=10 --loglevel=INFO --pidfile=/tmp/celery.pid
