add domain name to allowed hosts env var in cloudformation

--- a/cloudformation/template.yaml
+++ b/cloudformation/template.yaml
@@ -612,6 +612,8 @@ Resources:
           Value: {Ref: FloatApiToken}
         - Name: FLOAT_URL
           Value: {Ref: FloatApiUrl}
+        - Name: ALLOWED_HOSTS
+          Value: {Ref: DomainName}
         Essential: 'true'
         Image:
           Fn::Join:
