--- a/dashboard/apps/dashboard/fixtures/auth_group_permissions.yaml
+++ b/dashboard/apps/dashboard/fixtures/auth_group_permissions.yaml
@@ -24,6 +24,7 @@
       - ['change_department', 'dashboard', 'department']
       - ['change_person', 'dashboard', 'person']
       - ['upload_person', 'dashboard', 'person']
+      - ['change_skill', 'dashboard', 'skill']
       - ['export_person_rates', 'dashboard', 'person']
       - ['change_product', 'dashboard', 'product']
       - ['adjustmentexport_product', 'dashboard', 'product']
@@ -59,6 +60,7 @@
       - ['change_area', 'dashboard', 'area']
       - ['change_department', 'dashboard', 'department']
       - ['change_person', 'dashboard', 'person']
+      - ['change_skill', 'dashboard', 'skill']
       - ['change_product', 'dashboard', 'product']
       - ['change_task', 'dashboard', 'task']
       - ['change_cost', 'dashboard', 'cost']
