send an email when a new person is added

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
-exclude = .git/,env/,venv/,node_modules/, dashboard/apps/dashboard/migrations/,dashboard/settings/,dashboard/__init__.py,dashboard/apps/dashboard/models/__init__.py
+exclude = .git/,env/,venv/,node_modules/, dashboard/apps/dashboard/migrations/,dashboard/settings/,dashboard/__init__.py,dashboard/apps/dashboard/models/__init__.py,dashboard/apps/dashboard/apps.py
 max-complexity = 10
 max-line-length = 100
 
